// proto/blog/post.proto
syntax = "proto3";
package example.blog.blog;

option go_package = "github.com/example/blog/x/blog/types";

import "gogoproto/gogo.proto";

message Comment {
    uint64 id = 1;
    string body = 2; 
    string postID = 3; 
    string creator = 4;
  }

  message MsgCreateComment {
    string creator = 1;
    string body = 2;
    string postID = 3;
  }
  